--- a/tools/WpfModuloTool/MainWindow.xaml
+++ b/tools/WpfModuloTool/MainWindow.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="米字形数码管取模工具" Height="400" Width="600">
-    <Grid>
-        <Canvas x:Name="DigitCanvas" Width="200" Height="200" VerticalAlignment="Top" Background="LightGray">
+    <DockPanel>
+        <Canvas x:Name="DigitCanvas" Width="200" Height="200" VerticalAlignment="Top" Background="LightGray" Margin="5">
             <!-- 绘制米字形数码管的线段 -->
             <Line x:Name="Line_LT" X1="40" Y1="30" X2="40" Y2="20" Stroke="Black" StrokeThickness="5" Tag="2:80" MouseLeftButtonDown="Line_MouseLeftButtonDown"/>
             <Line x:Name="Line_T" X1="50" Y1="20" X2="150" Y2="20" Stroke="Black" StrokeThickness="5" Tag="2:40" MouseLeftButtonDown="Line_MouseLeftButtonDown"/>
@@ -26,10 +26,14 @@
             <Line x:Name="Line_MB" X1="97" Y1="180" X2="103" Y2="180" Stroke="Black" StrokeThickness="5" Tag="0:20" MouseLeftButtonDown="Line_MouseLeftButtonDown"/>
             <Line x:Name="Line_RB" X1="160" Y1="170" X2="160" Y2="180" Stroke="Black" StrokeThickness="5" Tag="0:10" MouseLeftButtonDown="Line_MouseLeftButtonDown"/>
         </Canvas>
-        <Button Content="采用编码" HorizontalAlignment="Left" Margin="136,230,0,0" VerticalAlignment="Top" Width="75" Click="SetCodeButton_Click"/>
-        <TextBox Name="tb_content" Width="100" VerticalAlignment="Top" Margin="228,230,272,0"></TextBox>
-        <Button Content="获取编码" HorizontalAlignment="Left" Margin="20,230,0,0" VerticalAlignment="Top" Width="75" Click="GetCodeButton_Click"/>
-        <Label Content="编码结果:" HorizontalAlignment="Left" Margin="20,270,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="ResultTextBox" HorizontalAlignment="Left" Height="250" Margin="20,300,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="540" IsReadOnly="True"/>
-    </Grid>
+        <DockPanel>
+            <StackPanel Margin="5" Orientation="Horizontal" DockPanel.Dock="Top">
+                <TextBox Margin="5" Name="tb_content" Width="100" VerticalAlignment="Top"></TextBox>
+                <Button Margin="5" Content="采用编码" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Click="SetCodeButton_Click"/>
+                <Button Margin="5" Content="获取编码" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Click="GetCodeButton_Click"/>
+            </StackPanel>
+            <Label Content="编码结果:" HorizontalAlignment="Left" Margin="5,0" VerticalAlignment="Top" DockPanel.Dock="Top"/>
+            <TextBox x:Name="ResultTextBox" Margin="5,0" TextWrapping="Wrap" IsReadOnly="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        </DockPanel>
+    </DockPanel>
 </Window>
